--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pay with DOM</title>
-</head>
-<body>
-    
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@5.0.0-beta.8/daisyui.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  </head>
+  <body class="bg-slate-800">
+    <section class="max-w-md min-h-screen mx-auto py-6 bg-gray-200">
+      <header>
+        <nav class="flex justify-center items-center my-6">
+          <section class="my-10 relative flex justify-center items-center w-9/12">
+            <img class="w-48 absolute" src="./assets/bg.png" alt="" />
+            <img class="w-16" src="./assets/Group.png" alt="" />
+          </section>
+        </nav>
+      </header>
+      <!-- login-section  -->
+        <div class="mx-10">
+            <!-- <div class="hero-content flex-col lg:flex-row-reverse"> -->
+              <div class="card bg-base-100 w-full max-w-sm shrink-0 shadow-2xl rounded-none my-6">
+                <form class="card-body my-6">
+                  <fieldset class="fieldset">
+                    <label class="fieldset-label">Account Number</label>
+                    <input value="11111111111" id="account-number" type="number" class="input" placeholder="type your Number" required />
+                    <label class="fieldset-label">PIN</label>
+                    <input id="pin" type="text" class="input" placeholder="type your PIN" required/>
+                    <div><a class="link link-hover">Forgot your PIN?</a></div>
+                    <button id="login-btn" class="btn btn-neutral mt-4">Login</button>
+                  </fieldset>
+                </form>
+              </div>
+            <!-- </div> -->
+          </div>
+    </section>
+    <script src="./script/login.js"></script>
+  </body>
 </html>
